minor margin spacing fixed

--- a/styles/main.css
+++ b/styles/main.css
@@ -56,6 +56,8 @@ p.caption {
   line-height: 130%;
   margin-bottom: 24px;
   text-align: center;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 h1 {
@@ -152,8 +154,8 @@ h1 {
   /* Container */
   .container {
       padding-bottom: 12px;
-    width: 90%;
-    margin: auto;
+    margin-left: 16px;
+    margin-right: 16px;
 
 
 
